# moly-studio

./: Cargo.toml  Implementation_Plan.md  LICENSE  MAKEPAD_WIDGET_IMPORTS.md  Plan.md
apps/moly-chat/: Cargo.toml
apps/moly-chat/src/: lib.rs
apps/moly-chat/src/screen/: design.rs  mod.rs
apps/moly-mcp/: Cargo.toml
apps/moly-mcp/src/: code_view.rs  lib.rs
apps/moly-mcp/src/screen/: design.rs  mod.rs
apps/moly-models/: Cargo.toml
apps/moly-models/src/: lib.rs
apps/moly-models/src/screen/: design.rs  mod.rs
apps/moly-settings/: Cargo.toml
apps/moly-settings/src/: lib.rs
apps/moly-settings/src/screen/: design.rs  mod.rs
moly-data/: Cargo.toml
moly-data/src/: chats.rs  lib.rs  mcp_servers.rs  moly_client.rs  preferences.rs  providers_manager.rs  store.rs
moly-shell/: Cargo.toml
moly-shell/src/: app.rs  main.rs
moly-shell/src/apps/: chat.rs  mcp.rs  mod.rs  models.rs  settings.rs
moly-shell/src/data/: chats.rs  mod.rs  preferences.rs  providers.rs  providers_manager.rs  store.rs
moly-widgets/: Cargo.toml
moly-widgets/src/: app_trait.rs  lib.rs  theme.rs
