[workspace]
resolver = "2"
members = [
    "moly-shell",
    "moly-widgets",
]

# Note: apps/moly-* directories are kept for reference but not used
# Widgets must be internal modules in moly-shell/src/apps/ due to
# Makepad's live_design! macro limitation. See MAKEPAD_WIDGET_IMPORTS.md

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[workspace.dependencies]
# Makepad UI framework (using moly-ai's revision for compatibility)
makepad-widgets = { git = "https://github.com/wyeworks/makepad", rev = "53b2e5c84" }

# Common utilities
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.11"
anyhow = "1.0"
chrono = "0.4"
url = "2.5.8"
futures = "0.3.31"
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }
