[package]
name = "moly-data"
version.workspace = true
edition.workspace = true

[dependencies]
# Makepad (for Cx in LiveHook if needed)
makepad-widgets.workspace = true

# Moly dependencies
moly-kit.workspace = true
aitk.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Utilities
log.workspace = true
chrono.workspace = true
dirs = "5.0"
