[package]
name = "moly-shell"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "moly"
path = "src/main.rs"

[dependencies]
makepad-widgets.workspace = true
moly-widgets = { path = "../moly-widgets" }

log.workspace = true
env_logger.workspace = true
anyhow.workspace = true
cfg-if = "1.0.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1", features = ["rt", "rt-multi-thread"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.100"
