[package]
name = "moly-mcp"
version.workspace = true
edition.workspace = true

[dependencies]
makepad-widgets.workspace = true
makepad-code-editor.workspace = true
moly-data.workspace = true
moly-widgets.workspace = true
moly-kit.workspace = true
log.workspace = true
serde.workspace = true
serde_json.workspace = true
